# JFinTEB

./: .gitignore  Dockerfile  README.md  leaderboard.md  make_leaderboard.py  pyproject.toml  submission.md
.github/ISSUE_TEMPLATE/: evaluation_request.md
data/: data_j.xls
data/economy-watchers-survey/domain/: test.jsonl  train.jsonl  validation.jsonl
data/economy-watchers-survey/horizon/: test.jsonl  train.jsonl  validation.jsonl
data/economy-watchers-survey/reason/: test.jsonl  validation.jsonl
data/economy-watchers-survey/sentiment/: test.jsonl  train.jsonl  validation.jsonl
data/wikinews/classification/: test.jsonl  train.jsonl  validation.jsonl
data/wikinews/retrieval/: docs.jsonl  query-test.jsonl  query-validation.jsonl
data/wikipedia/industry17/: test.jsonl  train.jsonl  validation.jsonl
data/wikipedia/industry33/: test.jsonl  train.jsonl  validation.jsonl
data/wikipedia/retrieval/: docs.jsonl  query-test.jsonl  query-validation.jsonl
docs/: ARCHITECTURE.md
docs/examples/: README.md  exclude.sh  include.sh  openai_embedder.sh  sentencebert_1gpu.sh  sentencebert_8gpu.sh  transformers_embedder_multigpu.sh
src/data/: __init__.py  ews.py  wikinews.py  wikipedia.py
src/jfinteb/: __main__.py
tests/: conftest.py  test_main.py
tests/embedders/: test_dp_sbert.py  test_openai.py  test_sbert.py  test_transformers.py
tests/evaluator/: conftest.py  test_classification_evaluator.py  test_clustering_evaluator.py  test_pair_classification_evaluator.py  test_reranking_evaluator.py  test_retrieval_evaluator.py  test_sts_evaluator.py
(+44 files in other folders)
