[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = [
    "Masahiro Suzuki <research@msuzuki.me>",
]
description = "The evaluation scripts for JFinTEB (Japanese Financial Text Embedding Benchmark)"
name = "JFinTEB"
packages = [{from = "src", include = "jfinteb"}, {from = "src", include = "data"}]
readme = "README.md"
version = "1.0.0"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
jsonargparse = {extras = ["jsonnet"], version = "^4.27.5"}
loguru = "^0.7.2"
scikit-learn = "^1.3.2"
transformers = {extras = ["ja", "sentencepiece"], version = "^4.52.1"}
datasets = "3.5.0"
sentence-transformers = "^4.1.0"
pytest = "7.1.3"
torch = "^2.7.1"
pydantic = "^2.7.3"
eval-type-backport = "^0.1.3"
smart-open = "^7.0.1"
openai = "^1.16.2"
pytest-mock = "^3.14.0"
tiktoken = "^0.6.0"
numpy = "^1.26"
accelerate = "^0.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
flake8 = "^7.0.0"
tabulate = "^0.9.0"
beautifulsoup4 = "^4.13.4"
xlrd = "^2.0.1"
einops = "^0.8.1"
psutil = "^7.0.0"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
